recovery-utils: add partition encryption support
Add a new function to the recovery library to be able to encrypt/unencrypt any
partition on the internal storage media. Since it's a destructive operation,
add a warning message and a confirmation prompt that can be skipped if needed.

Reflect this new functionality in the recovery-reboot app. Change the logic so
that an encryption key can be set even if there's no update package, because
now it's possible to encrypt other partitions while leaving the rootfs intact.
Also change the logic so that the app doesn't reboot into recovery mode if
there's no recovery command set.

Implement the same blacklist as the one in the recovery script.

https://onedigi.atlassian.net/browse/DEL-7174

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/recipes-core/recovery/recovery-utils/recovery-utils/recovery-reboot/Makefile
+++ b/meta-digi-dey/recipes-core/recovery/recovery-utils/recovery-utils/recovery-reboot/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2017, Digi International Inc.
+# Copyright (c) 2017-2021, Digi International Inc.
 #
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -41,6 +41,7 @@ install: $(PROGRAM)
 	install -d $(DESTDIR)/usr/bin
 	install -m 0755 $(PROGRAM) $(DESTDIR)/usr/bin/
 	ln -sf $(PROGRAM) $(DESTDIR)/usr/bin/update-firmware
+	ln -sf $(PROGRAM) $(DESTDIR)/usr/bin/encrypt-partitions
 
 .PHONY: clean
 clean:
