u-boot-dey: use global variables to generalize install scripts
Create global variables:
  DEFAULT_IMAGE_NAME
  GRAPHICAL_IMAGES

to have them substituted on the U-Boot install scripts for better
generalization.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -40,3 +40,6 @@ BOOT_SCRIPTS = "boot.scr:boot.scr"
 
 # Flash image types
 IMAGE_FSTYPES ?= "tar.bz2 ubifs boot.ubifs recovery.ubifs"
+
+# Default image for install scripts
+DEFAULT_IMAGE_NAME ?= "core-image-base"
