dey-image-qt: compress .ext4 images by default
Since these images are highly compressable, this greatly reduces the amount of
space taken up by build artifacts.

Modify the code used to generate the .sdcard and .installer.zip files so that
they contain the decompressed .ext4 image.

https://onedigi.atlassian.net/browse/DEL-7582

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -47,4 +47,4 @@ XBEE_TTY ?= "ttymxc4"
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
 # Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4 sdcard tar.bz2 recovery.vfat"
+IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard tar.bz2 recovery.vfat"
