--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -47,4 +47,4 @@ XBEE_TTY ?= "ttymxc4"
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
 # Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4 sdcard tar.bz2 recovery.vfat"
+IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard tar.bz2 recovery.vfat"
