dey-image-qt: compress .sdcard images by default
These images are comprised of the bootloader, linux and rootfs images. Since
the rootfs images are highly compressable, we can compress the .sdcard file as
well to reduce the space taken up by build artifacts.

https://onedigi.atlassian.net/browse/DEL-7582

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -33,4 +33,4 @@ XBEE_TTY ?= "ttyLP0"
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
 # Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard tar.bz2 recovery.vfat"
+IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat"
