--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -46,4 +46,4 @@ XBEE_TTY ?= "ttymxc3"
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
 # Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard tar.bz2 recovery.vfat"
+IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat"
