dey.conf: use the latest available versions of WebKit recipes
Otherwise, Yocto will use the recipes in meta-webkit, which are slightly older.

https://onedigi.atlassian.net/browse/DEL-7578

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -67,6 +67,12 @@ PREFERRED_VERSION_libsoc = "git"
 # recipe in case there are NXP-specific changes in it
 PREFERRED_PROVIDER_opencl-headers ?= "imx-gpu-viv"
 
+# Use the latest versions of the WebKit recipes
+PREFERRED_VERSION_cog = "0.9.90"
+PREFERRED_VERSION_libwpe = "1.10.0"
+PREFERRED_VERSION_wpebackend-fdo = "1.9.92"
+PREFERRED_VERSION_wpewebkit = "2.32.1"
+
 # Use the FDO backend for WPE WebKit
 PREFERRED_PROVIDER_virtual/wpebackend = "wpebackend-fdo"
 
