images: include packagegroup-core-selinux if "selinux" is in DISTRO_FEATURES
This packagegroup includes all of the userspace packages needed to use SELinux.
For now, use the same variant of the packagegroup, which contains all available
packages.

Since the meta-selinux layer isn't available in all platforms, implement this
change via a dynamic layer.

https://onedigi.atlassian.net/browse/DEL-7641

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -8,6 +8,8 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILES_DYNAMIC += " \
     webkit:${LAYERDIR}/dynamic-layers/webkit/*/*/*.bb \
     webkit:${LAYERDIR}/dynamic-layers/webkit/*/*/*.bbappend \
+    selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bb \
+    selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bbappend \
 "
 
 BBFILE_COLLECTIONS += "digi-dey"
