--- a/sdk/config/ccimx8x-sbc-pro/bblayers.conf.sample
+++ b/sdk/config/ccimx8x-sbc-pro/bblayers.conf.sample
@@ -20,6 +20,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-python2 \
   ##DIGIBASE##/meta-webkit \
   ##DIGIBASE##/meta-imx/meta-ml \
+  ##DIGIBASE##/meta-selinux \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
   ##DIGIBASE##/meta-digi/meta-digi-dey \
   "
