--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -15,8 +15,8 @@ LAYERDEPENDS_digi-arm = "core freescale-layer"
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
-DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
-DIGI_MTK_GIT ?= "git://stash.digi.com/"
+DIGI_LOG_GIT ?= "git://log-sln-git.digi.com"
+DIGI_MTK_GIT ?= "git://stash.digi.com"
 DIGI_GIT	 ?= "${DIGI_LOG_GIT}"
 DIGI_PKG_SRC ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
 
