digi: [cosmetic] remove final slash from Digi remotes and move it to recipes
Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -33,8 +33,8 @@ DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 # Additional license directories
 LICENSE_PATH += "${LAYERDIR}/custom-licenses"
 
-DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
-DIGI_MTK_GIT ?= "git://stash.digi.com/"
+DIGI_LOG_GIT ?= "git://log-sln-git.digi.com"
+DIGI_MTK_GIT ?= "git://stash.digi.com"
 DIGI_GIT	 ?= "${DIGI_LOG_GIT}"
 DIGI_PKG_SRC ?= "https://ftp1.digi.com/support/digiembeddedyocto/source"
 
