ccimx6sbc: install Qualcomm-related packages along with the Atheros ones
The idea is to have the support for both chips co-exist in the same image, then
have the system detect which chip is being used during runtime.

https://onedigi.atlassian.net/browse/DEL-7661
https://onedigi.atlassian.net/browse/DEL-7664

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,14 +5,17 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
-HAS_WIFI_VIRTWLANS = "false"
+# Wireless external module
+WIRELESS_MODULE_append = " ${@oe.utils.conditional('HAVE_WIFI', '1', 'kernel-module-qualcomm', '', d)}"
+HAS_WIFI_VIRTWLANS = "true"
 
 # Wireless p2p interface
+WLAN_P2P_INTERFACE ?= "p2p0"
 WLAN_P2P_DEVICE_NAME ?= "ccimx6-p2p"
 
 # Firmware
-MACHINE_FIRMWARE_append = " ${@oe.utils.conditional('HAVE_BT', '1' , 'firmware-atheros-ar3k', '', d)}"
-MACHINE_FIRMWARE_append = " ${@oe.utils.conditional('HAVE_WIFI', '1' , 'firmware-atheros-ath6kl', '', d)}"
+MACHINE_FIRMWARE_append = " ${@oe.utils.conditional('HAVE_BT', '1' , 'firmware-atheros-ar3k firmware-qualcomm-qca6564-bt', '', d)}"
+MACHINE_FIRMWARE_append = " ${@oe.utils.conditional('HAVE_WIFI', '1' , 'firmware-atheros-ath6kl firmware-qualcomm-qca6564-wifi', '', d)}"
 
 PREFERRED_PROVIDER_virtual/libg2d_mx6 = "imx-gpu-g2d"
 
