--- a/meta-digi-dey/recipes-connectivity/wpa-supplicant/wpa-supplicant/ccimx6sbc/wpa_supplicant_p2p.conf
+++ b/meta-digi-dey/recipes-connectivity/wpa-supplicant/wpa-supplicant/ccimx6sbc/wpa_supplicant_p2p.conf
@@ -1,6 +1,8 @@
 ctrl_interface=/var/run/wpa_supplicant
-ctrl_interface_group=0
+update_config=1
 device_name=ccimx6-p2p
-device_type=10-0050F204-5
-config_methods=virtual_push_button keypad display pin
+manufacturer=QCA
+model_name=McK
+device_type=1-0050F204-1
+config_methods=display keypad push_button
 persistent_reconnect=1
