machines: add SQUASFS to IMAGE_FSTYPES for read-only-rootfs
Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://onedigi.atlassian.net/browse/DEL-7708

--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -41,3 +41,5 @@ XBEE_TTY ?= "ttymxc1"
 
 # Flash image types
 IMAGE_FSTYPES ?= "tar.bz2 ubifs boot.ubifs recovery.ubifs"
+# Add SQUASHFS if read-only-rootfs is enabled
+IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", "squashfs", "", d)}'
