--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -37,6 +37,8 @@ BT_TTY ?= "ttymxc0"
 
 # Flash image types
 IMAGE_FSTYPES ?= "tar.bz2 ubifs boot.ubifs recovery.ubifs"
+# Add SQUASHFS if read-only-rootfs is enabled
+IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", "squashfs", "", d)}'
 
 # Default image for install scripts
 DEFAULT_IMAGE_NAME ?= "core-image-base"
