read-only: remove regular rootfs fstypes for read-only-rootfs
If IMAGE_FEATURE 'read-only-rootfs' is active, the rootfs image
will be SQUASHFS.
Remove other root file system images, such as ext4, ubifs, sdcard.gz
to avoid confusion and use by install scripts.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -45,7 +45,7 @@ BT_TTY ?= "ttymxc1"
 # XBee
 XBEE_TTY ?= "ttymxc4"
 
-# Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat"
-# Add SQUASHFS if read-only-rootfs is enabled
-IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", "squashfs", "", d)}'
+# Image FS types
+IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
+				       "boot.vfat tar.bz2 recovery.vfat squashfs", \
+				       "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat", d)}'
