--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -39,7 +39,7 @@ BT_TTY ?= "ttymxc0"
 # XBee
 XBEE_TTY ?= "ttymxc1"
 
-# Flash image types
-IMAGE_FSTYPES ?= "tar.bz2 ubifs boot.ubifs recovery.ubifs"
-# Add SQUASHFS if read-only-rootfs is enabled
-IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", "squashfs", "", d)}'
+# Image FS types
+IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
+				       "tar.bz2 boot.ubifs recovery.ubifs squashfs", \
+				       "tar.bz2 ubifs boot.ubifs recovery.ubifs", d)}'
