--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -35,10 +35,10 @@ SERIAL_CONSOLES ?= "115200;ttymxc4"
 # Bluetooth tty
 BT_TTY ?= "ttymxc0"
 
-# Flash image types
-IMAGE_FSTYPES ?= "tar.bz2 ubifs boot.ubifs recovery.ubifs"
-# Add SQUASHFS if read-only-rootfs is enabled
-IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", "squashfs", "", d)}'
+# Image FS types
+IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
+				       "tar.bz2 boot.ubifs recovery.ubifs squashfs", \
+				       "tar.bz2 ubifs boot.ubifs recovery.ubifs", d)}'
 
 # Default image for install scripts
 DEFAULT_IMAGE_NAME ?= "core-image-base"
