--- a/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
@@ -41,7 +41,7 @@ XBEE_RESET_N_GPIO ?= "mca-gpio@15,gpio1@8"
 XBEE_SLEEP_RQ_GPIO ?= "mca-gpio@11,gpio1@7"
 XBEE_TTY ?= "ttymxc3"
 
-# Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat"
-# Add SQUASHFS if read-only-rootfs is enabled
-IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", "squashfs", "", d)}'
+# Image FS types
+IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
+				       "boot.vfat tar.bz2 recovery.vfat squashfs", \
+				       "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat", d)}'
