--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-express.conf
@@ -29,7 +29,7 @@ XBEE_RESET_N_GPIO ?= "gpio3@13"
 XBEE_SLEEP_RQ_GPIO ?= "gpio3@16"
 XBEE_TTY ?= "ttyLP0"
 
-# Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat"
-# Add SQUASHFS if read-only-rootfs is enabled
-IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", "squashfs", "", d)}'
+# Image FS types
+IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
+				       "boot.vfat tar.bz2 recovery.vfat squashfs", \
+				       "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat", d)}'
