--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -42,8 +42,7 @@ XBEE_RESET_N_GPIO ?= "mca-gpio@15"
 XBEE_SLEEP_RQ_GPIO ?= "mca-gpio@11"
 XBEE_TTY ?= "ttyMCA0"
 
-
-# Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat"
-# Add SQUASHFS if read-only-rootfs is enabled
-IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", "squashfs", "", d)}'
+# Image FS types
+IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
+				       "boot.vfat tar.bz2 recovery.vfat squashfs", \
+				       "boot.vfat ext4.gz sdcard.gz tar.bz2 recovery.vfat", d)}'
