meta-digi-dey: filter out the weston_9.0.0.imx recipe from meta-freescale
The weston recipe we ported from NXP's meta-imx layer has the same name,
causing warnings to appear when applying our patches. To avoid confusion,
ignore the meta-freescale version of the recipe so that ours is the only
option.

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>
(cherry picked from commit 9e68d61f7c465800d62913c044e43c541f2eacd7)

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -16,6 +16,8 @@ BBFILE_COLLECTIONS += "digi-dey"
 BBFILE_PATTERN_digi-dey := "^${LAYERDIR}/"
 BBFILE_PRIORITY_digi-dey = "6"
 
+BBMASK += "meta-freescale/recipes-graphics/wayland/weston_9.0.0.imx.bb"
+
 LAYERDEPENDS_digi-dey  = "core digi-arm"
 LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-layer swupdate"
 
