hardknott: bump DEY version
Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,7 +1,7 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "3.2-r2"
-DISTRO_CODENAME = "gatesgarth"
+DISTRO_VERSION = "3.3-r1"
+DISTRO_CODENAME = "hardknott"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@d.getVar('DISTRO_VERSION')}"
 
