hardknott: sync distro config
Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -4,15 +4,13 @@ DISTRO_VERSION = "3.3-r1"
 DISTRO_CODENAME = "hardknott"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@d.getVar('DISTRO_VERSION')}"
+SDK_VERSION[vardepvalue] = "${SDK_VERSION}"
 
 MAINTAINER = "Digi Support <tech.support@digi.com>"
 
 TARGET_VENDOR = "-dey"
 
 LOCALCONF_VERSION = "1"
-
-DISTRO_VERSION[vardepsexclude] = "DATE"
-SDK_VERSION[vardepsexclude] = "DATE"
 
 # Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland bluez5 cellular"
@@ -47,8 +45,8 @@ FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 
 # Our layer only provides version 5.41, which we want to keep because
 # it was used for Bluetooth certification. However by default the newer
-# 5.55 version should be used, which is provided by the poky layer.
-PREFERRED_VERSION_bluez5 ?= "5.55"
+# 5.56 version should be used, which is provided by the poky layer.
+PREFERRED_VERSION_bluez5 ?= "5.56"
 
 # Set the PREFERRED_PROVIDER for jpeg functionality based on the MACHINE
 # architecture.  For armv7a devices libjpeg-turbo should be used to take
@@ -56,8 +54,8 @@ PREFERRED_VERSION_bluez5 ?= "5.55"
 PREFERRED_PROVIDER_jpeg ?= "jpeg"
 PREFERRED_PROVIDER_jpeg_armv7a ?= "libjpeg-turbo"
 
-PREFERRED_VERSION_linux-yocto ?= "5.8%"
-PREFERRED_VERSION_linux-yocto-rt ?= "5.4%"
+PREFERRED_VERSION_linux-yocto ?= "5.10%"
+PREFERRED_VERSION_linux-yocto-rt ?= "5.10%"
 
 # Use git recipe for libsoc
 PREFERRED_VERSION_libsoc = "git"
@@ -85,7 +83,7 @@ PREFERRED_VERSION_tensorflow-lite ?= "2.5.0"
 PREFERRED_VERSION_glibc ?= "2.32"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
-SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}/${MACHINE}"
+SDKPATHINSTALL = "/opt/${DISTRO}/${SDK_VERSION}/${MACHINE}"
 
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
 DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
@@ -106,21 +104,21 @@ p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
 svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
 
 SANITY_TESTED_DISTROS ?= " \
-            poky-3.0 \n \
-            poky-3.1 \n \
             poky-3.2 \n \
+            poky-3.3 \n \
             ubuntu-16.04 \n \
             ubuntu-18.04 \n \
             ubuntu-20.04 \n \
-            fedora-30 \n \
             fedora-31 \n \
             fedora-32 \n \
+            fedora-33 \n \
             centos-7 \n \
             centos-8 \n \
             debian-8 \n \
             debian-9 \n \
             debian-10 \n \
             opensuseleap-15.1 \n \
+            opensuseleap-15.2 \n \
             "
 # add poky sanity bbclass
 INHERIT += "poky-sanity"
