--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -21,7 +21,7 @@ BBMASK += "meta-freescale/recipes-graphics/wayland/weston_9.0.0.imx.bb"
 LAYERDEPENDS_digi-dey  = "core digi-arm"
 LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-layer swupdate"
 
-LAYERSERIES_COMPAT_digi-dey = "gatesgarth"
+LAYERSERIES_COMPAT_digi-dey = "hardknott"
 
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
