bblayers.conf.sample: add meta-timesys layer to all supported platforms
Signed-off-by: Francisco Gil <francisco.gilmartinez@digi.com>

--- a/sdk/config/ccimx6qpsbc/bblayers.conf.sample
+++ b/sdk/config/ccimx6qpsbc/bblayers.conf.sample
@@ -20,6 +20,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-python2 \
   ##DIGIBASE##/meta-webkit \
   ##DIGIBASE##/meta-selinux \
+  ##DIGIBASE##/meta-timesys \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
   ##DIGIBASE##/meta-digi/meta-digi-dey \
   "
