--- a/sdk/config/ccimx6sbc/bblayers.conf.sample
+++ b/sdk/config/ccimx6sbc/bblayers.conf.sample
@@ -20,6 +20,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-python2 \
   ##DIGIBASE##/meta-webkit \
   ##DIGIBASE##/meta-selinux \
+  ##DIGIBASE##/meta-timesys \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
   ##DIGIBASE##/meta-digi/meta-digi-dey \
   "
