--- a/sdk/config/ccimx6ulsbc/bblayers.conf.sample
+++ b/sdk/config/ccimx6ulsbc/bblayers.conf.sample
@@ -18,6 +18,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-freescale \
   ##DIGIBASE##/meta-fsl-demos \
   ##DIGIBASE##/meta-python2 \
+  ##DIGIBASE##/meta-timesys \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
   ##DIGIBASE##/meta-digi/meta-digi-dey \
   "
