--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -33,6 +33,8 @@ FSL_EULA_FILE_MD5SUMS_append = " \
     ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V30} \
 "
 
+BBMASK += "meta-freescale/recipes-bsp/imx-atf/imx-atf_2.4.bb"
+
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
