--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -19,6 +19,8 @@ SPL_BINARY = "spl/u-boot-spl.bin"
 # Set u-boot DTB
 UBOOT_DTB_NAME = "ccimx8mn-dvk.dtb"
 
+ATF_PLATFORM = "imx8mn"
+
 KERNEL_DEVICETREE ?= " \
     digi/ccimx8mn-dvk.dtb \
     digi/_ov_board_flexspi_ccimx8m-dvk.dtbo \
