weston-init: add customization directly in weston.ini instead of do_install()
We already have a copy of NXP's weston.ini, so there's no need to manuallly
append to it in our do_install_append(). Simply add our changes for our custom
desktop background directly in the source file.

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/recipes-graphics/wayland/weston-init/imx/weston.ini
+++ b/meta-digi-dey/recipes-graphics/wayland/weston-init/imx/weston.ini
@@ -30,3 +30,8 @@ touchscreen_calibrator=true
 
 [screen-share]
 command=/usr/bin/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize --rdp-tls-cert=/etc/freerdp/keys/server.crt --rdp-tls-key=/etc/freerdp/keys/server.key
+
+# Digi: Set custom background
+[shell]
+background-image=/usr/share/weston/digi_background.png
+background-type=scale-crop
