layer: add STM layer for CCMP15
This commit adds the STM layer to the DEY build
system and enables NXP platform layer.

Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -9,7 +9,9 @@ BBFILE_COLLECTIONS += "digi-arm"
 BBFILE_PATTERN_digi-arm := "^${LAYERDIR}/"
 BBFILE_PRIORITY_digi-arm = "5"
 
-LAYERDEPENDS_digi-arm = "core freescale-layer"
+LAYERDEPENDS_digi-arm = "core"
+LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_BUILD_PLATFORM', 'NXP', 'freescale-layer', '', d)}"
+LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_BUILD_PLATFORM', 'STM', 'stm-st-stm32mp', '', d)}"
 
 LAYERSERIES_COMPAT_digi-arm = "hardknott"
 
