--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -9,6 +9,11 @@ BBFILE_COLLECTIONS += "digi-arm"
 BBFILE_PATTERN_digi-arm := "^${LAYERDIR}/"
 BBFILE_PRIORITY_digi-arm = "5"
 
+BBFILES_DYNAMIC += " \
+    freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bb \
+    freesacel-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
+"
+
 LAYERDEPENDS_digi-arm = "core"
 LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_BUILD_PLATFORM', 'NXP', 'freescale-layer', '', d)}"
 LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_BUILD_PLATFORM', 'STM', 'stm-st-stm32mp', '', d)}"
