--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -10,6 +10,8 @@ BBFILES_DYNAMIC += " \
     webkit:${LAYERDIR}/dynamic-layers/webkit/*/*/*.bbappend \
     selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bb \
     selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bbappend \
+    freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bb \
+    freesacel-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
 "
 
 BBFILE_COLLECTIONS += "digi-dey"
