layer: add STM EULA files and checksum for STM platforms
The EULA version is SLA0048 Rev4/March 2018

Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -40,6 +40,10 @@ FSL_EULA_FILE_MD5SUMS_append = " \
     ${FSL_EULA_FILE_MD5SUM_LA_OPT_NXP_SOFTWARE_LICENSE_V30} \
 "
 
+# STM EULA
+EULA_FILE_ST_${MACHINE} = "${LAYERDIR}/conf/eula/${MACHINE}"
+EULA_FILE_ST_MD5SUM_${MACHINE} = "8b505090fb679839cefbcc784afe8ce9"
+
 BBMASK += "meta-freescale/recipes-bsp/imx-atf/imx-atf_2.4.bb"
 
 # Digi's General and Open Source license agreements
