layer: remove required STM recipe from build system
This commit removes some STM recipes that are not
needed in our layer because they apply changes that
are not required in our DEY layer.

Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -45,6 +45,13 @@ EULA_FILE_ST_${MACHINE} = "${LAYERDIR}/conf/eula/${MACHINE}"
 EULA_FILE_ST_MD5SUM_${MACHINE} = "8b505090fb679839cefbcc784afe8ce9"
 
 BBMASK += "meta-freescale/recipes-bsp/imx-atf/imx-atf_2.4.bb"
+# Ignore some STM recipes
+BBMASK += " \
+    meta-st-stm32mp/recipes-bsp/alsa/alsa-state-stm32mp1.bb \
+    meta-st-stm32mp/recipes-core/base-files/base-files_%.bbappend \
+    meta-st-stm32mp/recipes-core/busybox/busybox_%.bbappend \
+    meta-st-stm32mp/recipes-core/systemd/systemd-conf_%.bbappend \
+"
 
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
