--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -10,6 +10,8 @@ BBFILES_DYNAMIC += " \
     webkit:${LAYERDIR}/dynamic-layers/webkit/*/*/*.bbappend \
     selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bb \
     selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bbappend \
+    meta-speech:${LAYERDIR}/dynamic-layers/meta-speech/*/*/*.bb \
+    meta-speech:${LAYERDIR}/dynamic-layers/meta-speech/*/*/*.bbappend \
 "
 
 BBFILE_COLLECTIONS += "digi-dey"
