image_types: add support to create CCMP15 ubifs images
Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -40,6 +40,10 @@ MACHINE_FEATURES += "mca"
 # =========================================================================
 # Add ubi FSTYPES to default ones for nand volumes
 IMAGE_FSTYPES += "stmultiubi"
+# Image FS types
+IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
+                                       "tar.bz2 boot.ubifs recovery.ubifs squashfs", \
+                                       "tar.bz2 ubifs boot.ubifs recovery.ubifs", d)}'
 
 # =========================================================================
 # flashlayout
