pulseaudio: add alsa and pulseaudio support for the CCMP15
Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/recipes-bsp/alsa-state/alsa-state/ccmp15/asound.conf
+++ b/meta-digi-arm/recipes-bsp/alsa-state/alsa-state/ccmp15/asound.conf
@@ -1,18 +1,9 @@
-pcm.!playback_codec {
+pcm.stm32max98088 {
     type hw
-    card CCMP15DVK
-    device 0
+    card 0
 }
-
-pcm.!record_codec {
+ctl.stm32max98088 {
     type hw
-    card CCMP15DVK
-    device 1
+    card 0
 }
-
-pcm.!playback_hdmi {
-    type hw
-    card CCMP15DVK
-    device 2
-}
-
+ctl.!default stm32max98088
