ccmp15-dvk: set zImage as default kernel image type
This commit changes the "Image" for the "zImage" as the default kernel image
type for the STM platform.

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -67,6 +67,8 @@ TF_DEBUG ?= "0"
 # =========================================================================
 # Kernel
 # =========================================================================
+KERNEL_IMAGETYPE = "zImage"
+KERNEL_ALT_IMAGETYPE = "Image uImage vmlinux"
 KERNEL_DEFCONFIG ?= "ccmp15_defconfig"
 ST_KERNEL_LOADADDR ?= "0xC0008000"
 
