ccmp15-dvk: add firmware recipes for wireless and bluetooth
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -36,6 +36,15 @@ MACHINE_FEATURES += "gpu"
 MACHINE_FEATURES += "mca"
 
 # =========================================================================
+# Firmware
+# =========================================================================
+MACHINE_FIRMWARE_append = " firmware-murata firmware-murata-mfgtest"
+
+MACHINE_EXTRA_RRECOMMENDS += " \
+    ${MACHINE_FIRMWARE} \
+"
+
+# =========================================================================
 # Image
 # =========================================================================
 # Add ubi FSTYPES to default ones for nand volumes
