ccmp15-dvk: remove bluez5-init recipe for the ConnectCore MP15 platform
This platform initializes the Bluetooth interface through the own bluetooth
driver, so the custom Digi init scripts are not needed.

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -103,6 +103,9 @@ DEY_BUILD_PLATFORM = "STM"
 # Wireless external module
 HAS_WIFI_VIRTWLANS = "true"
 
+# Remove additional bluetooth packages
+MACHINE_BLUETOOTH_EXTRA_INSTALL = ""
+
 # =========================================================================
 # alsa
 # =========================================================================
