ccmp15-dvk: fix image types included for the ConnectCore MP15 platform
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -47,10 +47,8 @@ MACHINE_EXTRA_RRECOMMENDS += " \
 # =========================================================================
 # Image
 # =========================================================================
-# Add ubi FSTYPES to default ones for nand volumes
-IMAGE_FSTYPES += "stmultiubi"
 # Image FS types
-IMAGE_FSTYPES ?= '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
+IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
                                        "tar.bz2 boot.ubifs recovery.ubifs squashfs", \
                                        "tar.bz2 ubifs boot.ubifs recovery.ubifs", d)}'
 
