ccmp15-dvk: fix ubifs partition creation for ConnectCore MP15 platform
This commit uses the same values as the ConnectCore 6UL which uses the same
type of NAND.

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -95,6 +95,14 @@ UBOOT_ENV_RANGE ?= ""
 
 STORAGE_MEDIA = "mtd"
 
+# mkfs.ubifs parameters for boot partition (the one holding kernel and device tree files)
+# Max LEB count (-c 255) calculated for a partition of up to 32 MiB considering 128 KiB erase-block size.
+MKUBIFS_BOOT_ARGS ?= "-m 2048 -e 126976 -c 255"
+
+# mkfs.ubifs parameters for rootfs partition
+# Max LEB count (-c 8191) calculated for a partition of up to 1 GiB considering 128 KiB erase-block size.
+MKUBIFS_ARGS ?= "-m 2048 -e 126976 -c 8191"
+
 # Enable STM specific features
 DEY_BUILD_PLATFORM = "STM"
 
