meta-digi-arm: fix typo in dynamic-layers for NXP platform
Commit 8c396281 ("layer: add dynamic-layers for NXP platform") introduced a
typo in the dynamic layer name.

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILE_PRIORITY_digi-arm = "5"
 
 BBFILES_DYNAMIC += " \
     freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bb \
-    freesacel-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
+    freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
 "
 
 LAYERDEPENDS_digi-arm = "core"
