--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -11,7 +11,7 @@ BBFILES_DYNAMIC += " \
     selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bb \
     selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bbappend \
     freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bb \
-    freesacel-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
+    freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
 "
 
 BBFILE_COLLECTIONS += "digi-dey"
