--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -52,6 +52,9 @@ IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
                                        "tar.bz2 boot.ubifs recovery.ubifs squashfs", \
                                        "tar.bz2 ubifs boot.ubifs recovery.ubifs", d)}'
 
+# For populate_sdk, gcc-arm-none-eabi_9 has a python2 dependency, so we remove it.
+ST_TOOLS_FOR_SDK:remove = "nativesdk-gcc-arm-none-eabi"
+
 # =========================================================================
 # flashlayout
 # =========================================================================
