kirkstone migration: make layers compatible
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -18,7 +18,7 @@ LAYERDEPENDS_digi-arm = "core"
 LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_BUILD_PLATFORM', 'NXP', 'freescale-layer', '', d)}"
 LAYERDEPENDS_digi-arm += "${@oe.utils.conditional('DEY_BUILD_PLATFORM', 'STM', 'stm-st-stm32mp', '', d)}"
 
-LAYERSERIES_COMPAT_digi-arm = "hardknott"
+LAYERSERIES_COMPAT_digi-arm = "kirkstone"
 
 # Define new EULAs and add them to the list defined in meta-freescale.
 # See fsl-eula-unpack.bbclass.
