--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -21,7 +21,7 @@ BBFILE_PRIORITY_digi-dey = "6"
 LAYERDEPENDS_digi-dey  = "core digi-arm"
 LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-layer swupdate"
 
-LAYERSERIES_COMPAT_digi-dey = "hardknott"
+LAYERSERIES_COMPAT_digi-dey = "kirkstone"
 
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
