--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,7 +1,7 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "3.3-r1"
-DISTRO_CODENAME = "hardknott"
+DISTRO_VERSION = "4.0-r1"
+DISTRO_CODENAME = "kirkstone"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@d.getVar('DISTRO_VERSION')}"
 SDK_VERSION[vardepvalue] = "${SDK_VERSION}"
@@ -10,7 +10,7 @@ MAINTAINER = "Digi Support <tech.support@digi.com>"
 
 TARGET_VENDOR = "-dey"
 
-LOCALCONF_VERSION = "1"
+LOCALCONF_VERSION = "2"
 
 # Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland bluez5 cellular"
@@ -54,8 +54,8 @@ PREFERRED_VERSION_bluez5 ?= "5.56"
 PREFERRED_PROVIDER_jpeg ?= "jpeg"
 PREFERRED_PROVIDER_jpeg:armv7a ?= "libjpeg-turbo"
 
-PREFERRED_VERSION_linux-yocto ?= "5.10%"
-PREFERRED_VERSION_linux-yocto-rt ?= "5.10%"
+PREFERRED_VERSION_linux-yocto ?= "5.15%"
+PREFERRED_VERSION_linux-yocto-rt ?= "5.15%"
 
 # Use git recipe for libsoc
 PREFERRED_VERSION_libsoc = "git"
@@ -77,34 +77,24 @@ DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
 TCLIBCAPPEND = ""
 
 # Some packages need this (e.g. gstreamer1.0-plugins-ugly)
-LICENSE_FLAGS_WHITELIST += "commercial"
-
-PREMIRRORS ??= "\
-bzr://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
-cvs://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
-git://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
-gitsm://.*/.* http://downloads.yoctoproject.org/mirror/sources/ \n \
-hg://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
-osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
-p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
-svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
+LICENSE_FLAGS_ACCEPTED += "commercial"
 
 SANITY_TESTED_DISTROS ?= " \
-            poky-3.2 \n \
             poky-3.3 \n \
+            poky-3.4 \n \
             ubuntu-16.04 \n \
             ubuntu-18.04 \n \
             ubuntu-20.04 \n \
-            fedora-31 \n \
-            fedora-32 \n \
-            fedora-33 \n \
+            ubuntu-21.10 \n \
+            fedora-34 \n \
+            fedora-35 \n \
             centos-7 \n \
             centos-8 \n \
-            debian-8 \n \
             debian-9 \n \
             debian-10 \n \
-            opensuseleap-15.1 \n \
-            opensuseleap-15.2 \n \
+            debian-11 \n \
+            opensuseleap-15.3 \n \
+            almalinux-8.5 \n \
             "
 # add poky sanity bbclass
 INHERIT += "poky-sanity"
@@ -120,8 +110,6 @@ require conf/distro/include/no-static-libs.inc
 require conf/distro/include/yocto-uninative.inc
 require conf/distro/include/security_flags.inc
 INHERIT += "uninative"
-
-INHERIT += "reproducible_build"
 
 BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
