kirkstone migration: meta-digi-arm: add ST dynamic layer support
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -12,6 +12,8 @@ BBFILE_PRIORITY_digi-arm = "5"
 BBFILES_DYNAMIC += " \
     freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bb \
     freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
+    stm-st-stm32mp:${LAYERDIR}/dynamic-layers/stm-st-stm32mp/*/*/*.bb \
+    stm-st-stm32mp:${LAYERDIR}/dynamic-layers/stm-st-stm32mp/*/*/*.bbappend \
 "
 
 LAYERDEPENDS_digi-arm = "core"
