--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -190,3 +190,14 @@ VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
 
 # Disable use of vendorfs partition
 ST_VENDORFS = "0"
+
+# SWUpdate sw-description configuration
+BOOTFS_EXT ?= ".boot.ubifs"
+ROOTFS_EXT ?= ".ubifs"
+
+BOOT_DEV_NAME ?= "linux"
+ROOTFS_DEV_NAME ?= "rootfs"
+ROOTFS_ENC_DEV = "${ROOTFS_DEV_NAME}"
+ROOTFS_DEV_NAME_FINAL = "${@oe.utils.ifelse(d.getVar('TRUSTFENCE_ENCRYPT_ROOTFS', True) == '1', '${ROOTFS_ENC_DEV}', '${ROOTFS_DEV_NAME}')}"
+
+UBOOT_DEV_NAME ?= "/dev/mtd"
