conf: add new bootloader offset variable to be used on eMMC and SD card images.
This commit adds a new bootloader eMMC and SD card installation offset
variable.

Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6qpsbc.conf
@@ -24,6 +24,8 @@ UBOOT_CONFIG ??= "ccimx6qpsbc1GB ccimx6qpsbc2GB"
 UBOOT_CONFIG[ccimx6qpsbc1GB] = "ccimx6qpsbc1GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 UBOOT_CONFIG[ccimx6qpsbc2GB] = "ccimx6qpsbc2GB_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
+BOOTLOADER_SEEK_BOOT = "1"
+
 KERNEL_DEVICETREE ?= " \
     imx6qp-ccimx6qpsbc.dtb \
     imx6qp-ccimx6qpsbc-id160.dtb \
