--- a/meta-digi-arm/conf/machine/ccimx8mp-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mp-dvk.conf
@@ -12,7 +12,8 @@ MACHINE_FEATURES:remove = "wifi bluetooth"
 DIGI_FAMILY = "ccimx8mp"
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mp:ccimx8m:${DIGI_FAMILY}:"
 
-BOOTLOADER_SEEK = "32"
+BOOTLOADER_SEEK_USERDATA = "32"
+BOOTLOADER_SEEK_BOOT = "0"
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
