--- a/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
@@ -8,7 +8,8 @@ MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:ccimx8m:${DIGI_FAMILY}:"
 # Include the machine configuration for Digi's ConnectCore 8M module.
 include conf/machine/include/ccimx8m.inc
 
-BOOTLOADER_SEEK = "33"
+BOOTLOADER_SEEK_USERDATA = "33"
+BOOTLOADER_SEEK_BOOT = "0"
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
