ccmp1: add CCMP1 include file to collect common configuration
Signed-off-by: Mike Engel <Mike.Engel@digi.com>
(cherry picked from commit 84e544b27bbe234a03a783013a6a9063d1fe4b29)

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -7,6 +7,9 @@ include conf/machine/include/st-machine-common-stm32mp.inc
 include conf/machine/include/arm/armv7a/tune-cortexa7.inc
 include conf/machine/include/digi-defaults.inc
 
+# Include the machine configuration for Digi's ConnectCore MP1.
+include conf/machine/include/ccmp1.inc
+
 # =========================================================================
 # Chip architecture
 # =========================================================================
@@ -127,8 +130,6 @@ UBOOT_ENV_SIZE ?= "0x20000"
 # available space in the environment partition)
 UBOOT_ENV_RANGE ?= ""
 
-STORAGE_MEDIA = "mtd"
-
 # mkfs.ubifs parameters for boot partition (the one holding kernel and device tree files)
 # Max LEB count (-c 255) calculated for a partition of up to 32 MiB considering 128 KiB erase-block size.
 MKUBIFS_BOOT_ARGS ?= "-m 2048 -e 126976 -c 255"
@@ -136,9 +137,6 @@ MKUBIFS_BOOT_ARGS ?= "-m 2048 -e 126976 -c 255"
 # mkfs.ubifs parameters for rootfs partition
 # Max LEB count (-c 8191) calculated for a partition of up to 1 GiB considering 128 KiB erase-block size.
 MKUBIFS_ARGS ?= "-m 2048 -e 126976 -c 8191"
-
-# Enable STM specific features
-DEY_BUILD_PLATFORM = "STM"
 
 # Wireless external module
 HAS_WIFI_VIRTWLANS = "true"
