dey.conf: fix graphical backend for images with wayland without x11
https://onedigi.atlassian.net/browse/DEL-7981

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -26,7 +26,8 @@ DISTRO_FEATURES_DEFAULT:remove = "3g nfc nfs zeroconf"
 POKY_DEFAULT_DISTRO_FEATURES:remove = "ptest wayland"
 
 GRAPHICAL_BACKEND = "${@bb.utils.contains('DISTRO_FEATURES', 'x11 wayland', 'xwayland', \
-                        bb.utils.contains('DISTRO_FEATURES', 'x11', 'x11', 'fb', d), d)}"
+                        bb.utils.contains('DISTRO_FEATURES', 'x11', 'x11', \
+                        bb.utils.contains('DISTRO_FEATURES', 'wayland', 'wayland', 'fb', d), d), d)}"
 
 # Recovery initramfs image name.
 RECOVERY_INITRAMFS_IMAGE ?= "dey-image-recovery-initramfs"
