ccmp15-dvk: add graphical support with wayland/weston
https://onedigi.atlassian.net/browse/DEL-7981

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -119,3 +119,40 @@ MACHINE_BLUETOOTH_EXTRA_INSTALL = ""
 # alsa
 # =========================================================================
 ALSA_LIST = ""
+
+# =========================================================================
+# DISTRO features
+# =========================================================================
+DISTRO_FEATURES:append = " opengl"
+DISTRO_FEATURES:remove = " x11 "
+DISTRO_FEATURES:append = " gplv3 "
+
+# add support of gstreamer
+DISTRO_FEATURES:append = " gstreamer "
+
+# add support of optee
+DISTRO_FEATURES:append = " optee "
+
+# add support of splashscreen
+DISTRO_FEATURES:append = " splashscreen "
+
+# add support of wayland
+DISTRO_FEATURES:append = " wayland pam "
+
+# add support of systemd
+DISTRO_FEATURES:append = " systemd "
+
+# add support of efi
+DISTRO_FEATURES:append = " efi "
+
+# add support of InitRD installation package
+DISTRO_FEATURES:append = " initrd "
+
+# add support to pulseaudio
+DISTRO_FEATURES:append = "pulseaudio"
+
+# Disabling sysvinit
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
+
+VIRTUAL-RUNTIME_init_manager = "systemd"
+VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
