mkproject: fix STM EULA path and enabling
Building some packages from the ccmp15 requires the acceptance of the
STM EULA. Add the acceptance lines to the config template and fix the
path to the EULA en the mkproject script.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccmp15-dvk/local.conf.sample
+++ b/sdk/config/ccmp15-dvk/local.conf.sample
@@ -287,5 +287,10 @@ CONF_VERSION = "2"
 #
 PRSERV_HOST = "localhost:0"
 
+#
+# Some packages are covered by STM EULA
+#
+#ACCEPT_EULA_ccmp15-dvk = "1"
+
 # Enable STM specific features
 DEY_BUILD_PLAFORM = "STM"
