libdigiapix: ccmp15: fix user LED and buttons
Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccmp15-dvk/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccmp15-dvk/libdigiapix.conf
@@ -3,11 +3,11 @@ model = Digi International ConnectCore MP15 DVK.
 
 [GPIO]
 
-# USER LED
-USER_LED = gpioa,15
+# USER LED (ULED)
+USER_LED = GPIOC,8
 
-# USER BUTTON (EXP_GPIO_1)
-USER_BUTTON = gpioa,13
+# USER BUTTON (USER_1)
+USER_BUTTON = GPIOA,13
 
 [I2C]
 
