--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -12,6 +12,8 @@ BBFILES_DYNAMIC += " \
     selinux:${LAYERDIR}/dynamic-layers/selinux/*/*/*.bbappend \
     freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bb \
     freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/*/*/*.bbappend \
+    stm-st-stm32mp:${LAYERDIR}/dynamic-layers/stm-st-stm32mp/*/*/*.bb \
+    stm-st-stm32mp:${LAYERDIR}/dynamic-layers/stm-st-stm32mp/*/*/*.bbappend \
 "
 
 BBFILE_COLLECTIONS += "digi-dey"
