--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -156,3 +156,6 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
+
+# Disable use of vendorfs partition
+ST_VENDORFS = "0"
